[package]
name = "logtra"
version = "0.3.2"
authors = ["Benedikt Danner <benedikt@danner.eu.com>"]
edition = "2021"
description = "A minimal logging library"
readme = "./README.md"
repository = "https://github.com/Homuncoli/logtra"
license-file = "./LICENSE"
keywords = ["xtra", "debugging", "profiling", "testing", "game-development"]
categories = ["debugging", "profiling", "testing", "game-development", "game-engines"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
contra = "5.0.2"
